// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review rendering works for approved 1`] = `
Object {
  "author_icon": "https://avatars1.githubusercontent.com/u/10660468?v=4",
  "author_link": "https://github.com/JasonEtco",
  "author_name": "JasonEtco",
  "color": "#36a64f",
  "fallback": "[github-slack/public-test] JasonEtco approved wilhelmklopp's pull request",
  "footer": "<https://github.com/github-slack/public-test|github-slack/public-test>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "mrkdwn_in": Array [
    "text",
  ],
  "pretext": "JasonEtco approved wilhelmklopp's pull request",
  "text": "🚢 ",
  "title": "Review on #19 removing more words",
  "title_link": "https://github.com/github-slack/public-test/pull/19#pullrequestreview-97014958",
  "ts": 1518730621,
}
`;

exports[`Review rendering works for changes requested 1`] = `
Object {
  "author_icon": "https://avatars1.githubusercontent.com/u/10660468?v=4",
  "author_link": "https://github.com/JasonEtco",
  "author_name": "JasonEtco",
  "color": "#cb2431",
  "fallback": "[github-slack/public-test] JasonEtco requested changes on wilhelmklopp's pull request",
  "footer": "<https://github.com/github-slack/public-test|github-slack/public-test>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "mrkdwn_in": Array [
    "text",
  ],
  "pretext": "JasonEtco requested changes on wilhelmklopp's pull request",
  "text": "No sirry",
  "title": "Review on #19 removing more words",
  "title_link": "https://github.com/github-slack/public-test/pull/19#pullrequestreview-97014879",
  "ts": 1518730606,
}
`;

exports[`Review rendering works for commented 1`] = `
Object {
  "author_icon": "https://avatars1.githubusercontent.com/u/7718702?v=4",
  "author_link": "https://github.com/wilhelmklopp",
  "author_name": "wilhelmklopp",
  "color": "#24292f",
  "fallback": "[github-slack/public-test] wilhelmklopp commented on their pull request",
  "footer": "<https://github.com/github-slack/public-test|github-slack/public-test>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "mrkdwn_in": Array [
    "text",
  ],
  "pretext": "wilhelmklopp commented on their pull request",
  "text": "Very good work",
  "title": "Review on #19 removing more words",
  "title_link": "https://github.com/github-slack/public-test/pull/19#pullrequestreview-96966585",
  "ts": 1518721251,
}
`;
